--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
+    "async-fetch": "^0.2.1",
     "next": "12.3.1",
+    "next-transpile-modules": "^9.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "simpul": "^0.9.2"
