--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "simpul": "^0.9.2"
   },
   "devDependencies": {
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint": "^8.30.0",
+    "eslint-config-next": "^13.0.7"
   }
 }
